--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/Benpou/todo-api-2#readme",
   "dependencies": {
-    "mongodb": "^2.2.19"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongodb": "^2.2.19",
+    "mongoose": "^4.5.9"
   }
 }
